...

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kumite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:id="@+id/start_button"
        android:layout_marginBottom="15dp"
        android:background="#0ed21b"
        android:onClick="ToStore"

        />

...
