...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/gotocheckout"
                android:layout_width="wrap_content"
                android:textColor="#000"

                android:layout_height="22dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/cardview_dark_background"
                android:textSize="12dp"
                android:text="checkout" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>


...
