<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000"
    android:layout_height="match_parent"
    tools:context="com.alford.grappler.Checkout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#fff">

        <ImageView
            android:layout_width="50dp"

            android:layout_height="wrap_content"
            android:src="@drawable/lucha2"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/recycler2">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="#000">

        <Button
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/final_purchase"
            android:text="purchase"/>

    </RelativeLayout>


</RelativeLayout>
